# RDB_Monitor

./: .gitignore  .travis.yml  CMakeLists.txt  ControllerTestOuput.txt  ControllerTestOutput.txt  MotorTestOutput.txt  RDB_Diplomaterv_Monitor.pro  RDB_Monitor.pro  README  README.md  resources.qrc
.github/workflows/: codeql-analysis.yml  main.yml
application/: CMakeLists.txt  application.pro
application/sources/: add_connection_dialog.cpp  add_connection_dialog.hpp  backend.cpp  backend.hpp  backend_signal_interface.hpp  configuration.cpp  configuration.hpp  connection_factory.hpp  connection_manager_dialog.cpp  connection_manager_dialog.hpp  connection_request_data.hpp  continous_measurement_data_protocol.cpp  continous_measurement_data_protocol.hpp  data_exporting_interface.hpp  data_line.cpp  data_line.hpp  data_point.cpp  data_point.hpp  data_processing_interface.hpp  diagram.cpp  diagram.hpp  diagram_container.cpp  diagram_container.hpp  global.hpp  gui_signal_interface.hpp  i_backend_signal.hpp  i_connection.hpp  i_connection_settings.hpp  i_connection_settings_editor.hpp  i_gui_signal.hpp  i_network_connection.hpp  i_protocol.hpp  main.cpp  main_window.cpp  main_window.hpp  measurement_data_protocol.cpp  measurement_data_protocol.hpp  network_handler.cpp  network_handler.hpp  ordered_dict.h  (+7 more)
documentation/: QtFramework_Sequence.dia  RDB_Diplomaterv_Monitor_Activity.dia  RDB_Diplomaterv_Monitor_Class.dia  RDB_Diplomaterv_Monitor_Sequence.dia  SerialPort_State.dia
images/: Icon.odg
sources/: CMakeLists.txt  backend.cpp  backend.hpp  backend_signal_interface.hpp  configuration.hpp  data_connection_interface.h  data_connection_interface.hpp  data_line.cpp  data_line.h  data_line.hpp  data_point.cpp  data_point.hpp  data_processing_interface.hpp  data_processor.cpp  data_processor.hpp  data_processor_interface.cpp  data_processor_interface.hpp  diagram.cpp  diagram.hpp  diagram_container.cpp  diagram_container.h  diagram_container.hpp  global.hpp  gui.cpp  gui.hpp  gui_signal_interface.h  main.cpp  main_window.cpp  main_window.hpp  measurement_data_protocol.cpp  measurement_data_protocol.hpp  network_connection_interface.hpp  network_handler.cpp  network_handler.hpp  qt_framework.cpp  qt_framework.hpp  serial_port.cpp  serial_port.hpp
test_files/: TEST_1C_0E_MDP.mdp  TEST_2C_0E_MDP.mdp  saved_diagrams.mdp
tests/: CMakeLists.txt  GoogleTest.pri  test_coverage.py  tests.pro
tests/protocol_emulator/: protocol_emulator.py
tests/protocol_emulator/emulators/: cmdp.py  emulator.py  emulator_factory.py  mdp.py
tests/sources/: test_backend.cpp  test_configuration.cpp  test_continous_measurement_data_protocol.cpp  test_data_line.cpp  test_data_point.cpp  test_data_point.hpp  test_diagram.cpp  test_diagram_container.cpp  test_main.cpp  test_measurement_data_protocol.cpp  test_ordered_dict.cpp  test_protocol_common.h  test_serial_port.cpp
tests/test_files/: MotorTestOutput_EDITED.txt  TEST_1C_0E_CMDP.cmdp  TEST_1C_0E_CMDP_NoTitles.cmdp  TEST_1C_0E_CMDP_Simple.cmdp  TEST_1C_0E_MDP.mdp  TEST_1C_1E_MDP_HeadlineError.mdp  TEST_1C_2E_MDP_DatalineError.mdp  TEST_2C_0E_MDP.mdp
